--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Rafał Masłowski – ekspert w doradztwie kredytowym. Pomagam w wyborze najlepszych ofert kredytów hipotecznych i gotówkowych. Profesjonalne wsparcie na każdym etapie procesu. Skontaktuj się!"
+    />
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>kredytymaslowski.pl</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
