--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>kredytymaslowski.pl</title>
+    <title>Kredyty Masłowski – Doradca Finansowy Rafał Masłowski</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
