changed favico icon link

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Rafał Masłowski – ekspert w doradztwie kredytowym. Pomagam w wyborze najlepszych ofert kredytów hipotecznych i gotówkowych. Profesjonalne wsparcie na każdym etapie procesu. Skontaktuj się!"
     />
 
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <title>Kredyty Masłowski – Doradca Finansowy Rafał Masłowski</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
